# aws-localstack-tests

./: .gitignore  README.md  docker-compose.yml  package.json
node/: .env  bucketOperations.ts  index.ts  package.json
node/src/: app.ts  dynamodbExample.ts  s3Example.ts  sensor.ts  server.ts
node/src/gateways/: dynamodbExample.ts  sqsExample.ts
node/src/repositories/: sensor.ts  types.ts
node/src/routers/: sensor.ts
python/: .env  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
python/app/: dynamodb_example.py  env.py  s3_example.py  sqs_example.py  timestream_example.py
python/tests/: tests_s3.py  tests_sqs.py  tests_timestream.py
